[package]
name = "ybc"
version = "0.2.1"
description = "A Yew component library based on the Bulma CSS framework."
authors = ["Anthony Dodd <dodd.anthonyjosiah@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/thedodd/ybc"
readme = "README.md"
categories = ["wasm", "web-programming"]
keywords = ["wasm", "web", "bulma", "sass", "yew"]

[dependencies]
derive_more = "0.99.9"
web-sys = { version="0.3", features=["Element", "File", "HtmlCollection", "HtmlSelectElement"] }
yew = { git="https://github.com/yewstack/yew" }
yew-agent = { git="https://github.com/yewstack/yew" }
yewtil = { version="0.4.0", features=["neq"] }
wasm-bindgen = "0.2"

[features]
docinclude = [] # Used only for activating `doc(include="...")` on nightly.

[package.metadata.docs.rs]
features = ["docinclude"] # Activate `docinclude` during docs.rs build.
